Updates from Overleaf

--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -421,3 +421,149 @@ doi = {10.5194/ms-7-93-2016}
   year={2011},
   publisher={PRENTICE HALL BRASIL}
 }
+
+@book{szeliski2021computer,
+  title={Computer vision: algorithms and applications},
+  author={Szeliski, Richard},
+  year={2021},
+  publisher={Springer Science \& Business Media}
+}
+
+@inproceedings{erdogan2014shifting,
+  title={Shifting Colors to Overcome Not Realizing Objects Problem due to Color Vision Deficiency},
+  author={ERDOGAN, Kemal and YILMAZ, Nihat},
+  booktitle={Proc. of the Second Intl. Conf. on Advances in Computing, Electronics and Electrical Technology-CEET},
+  year={2014}
+}
+
+@book{hall2012illumination,
+  title={Illumination and color in computer generated imagery},
+  author={Hall, Roy},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{wilson2000handbook,
+  title={Handbook of computer vision algorithms in image algebra},
+  author={Wilson, Joseph N and Ritter, Gerhard X},
+  year={2000},
+  publisher={CRC press}
+}
+@article{martin2004learning,
+  title={Learning to detect natural image boundaries using local brightness, color, and texture cues},
+  author={Martin, David R and Fowlkes, Charless C and Malik, Jitendra},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={26},
+  number={5},
+  pages={530--549},
+  year={2004},
+  publisher={IEEE}
+}
+@article{marr1980theory,
+  title={Theory of edge detection},
+  author={Marr, David and Hildreth, Ellen},
+  journal={Proceedings of the Royal Society of London. Series B. Biological Sciences},
+  volume={207},
+  number={1167},
+  pages={187--217},
+  year={1980},
+  publisher={The Royal Society London}
+}
+@book{koubaa2018robot,
+  title={Robot path planning and cooperation: foundations, algorithms and experimentations},
+  author={Koub{\^a}a, Anis and Bennaceur, Hachemi and Chaari, Imen and Trigui, Sahar and Ammar, Adel and Sriti, Mohamed-Foued and Alajlan, Maram and Cheikhrouhou, Omar and Javed, Yasir},
+  volume={772},
+  year={2018},
+  publisher={Springer}
+}
+@book{latombe2012robot,
+  title={Robot motion planning},
+  author={Latombe, Jean-Claude},
+  volume={124},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+@article{zhang2014multiple,
+  title={A multiple mobile robots path planning algorithm based on A-star and Dijkstra algorithm},
+  author={Zhang, Zhanying and Zhao, Ziping},
+  journal={International Journal of Smart Home},
+  volume={8},
+  number={3},
+  pages={75--86},
+  year={2014}
+}
+@inproceedings{he2017comparison,
+  title={The comparison of four UAV path planning algorithms based on geometry search algorithm},
+  author={He, ZeFang and Zhao, Long},
+  booktitle={2017 9th International Conference on Intelligent Human-Machine Systems and Cybernetics (IHMSC)},
+  volume={2},
+  pages={33--36},
+  year={2017},
+  organization={IEEE}
+}
+@inproceedings{aburdene1991proposal,
+  title={A proposal for a remotely shared control systems laboratory},
+  author={Aburdene, MF and Mastascusa, EJ and Massengale, R},
+  booktitle={Proceedings Frontiers in Education Twenty-First Annual Conference. Engineering Education in a New World Order},
+  pages={589--592},
+  year={1991},
+  organization={IEEE}
+}
+@article{argyropoulos1983facility,
+  title={A Facility for Local and Remote Acquisition and Data Process Control in Metallurgy},
+  author={Argyropoulos, Stavros A and Valiveti, Radhakrishna S and Closset, Bernard M},
+  journal={JOM},
+  volume={35},
+  number={10},
+  pages={30--35},
+  year={1983},
+  publisher={Springer}
+}
+@article{ferrero2003remlab,
+  title={ReMLab: A Java-based remote, didactic measurement laboratory},
+  author={Ferrero, Alessandro and Salicone, Simona and Bonora, Claudio and Parmigiani, Marco},
+  journal={IEEE transactions on instrumentation and measurement},
+  volume={52},
+  number={3},
+  pages={710--715},
+  year={2003},
+  publisher={IEEE}
+}
+@inproceedings{kozik2012preparing,
+  title={Preparing and managing the remote experiment in education},
+  author={Koz{\'\i}k, Tom{\'a}{\v{s}} and {\v{S}}imon, Marek},
+  booktitle={2012 15th International Conference on Interactive Collaborative Learning (ICL)},
+  pages={1--4},
+  year={2012},
+  organization={IEEE}
+}
+@article{sanchez2004java,
+  title={A Java/Matlab-based environment for remote control system laboratories: Illustrated with an inverted pendulum},
+  author={S{\'a}nchez, Jos{\'e} and Dormido, Sebasti{\'a}n and Pastor, Rafael and Morilla, Fernando},
+  journal={IEEE Transactions on Education},
+  volume={47},
+  number={3},
+  pages={321--329},
+  year={2004},
+  publisher={IEEE}
+}
+@inproceedings{andria2006remote,
+  title={Remote Didactic Laboratory" G. Savastano": the Italian Experience for the E-learning at the Technical Universities in the Field of the Electrical and Electronic Measurements, Overview on Didactic Experiments},
+  author={Andria, G and Baccigalupi, A and Borsic, M and Carbone, P and Daponte, P and De Capua, C and Ferrero, A and Grimaldi, D and Liccardo, A and Locci, Nicolino and others},
+  booktitle={2006 IEEE Instrumentation and Measurement Technology Conference Proceedings},
+  pages={1537--1542},
+  year={2006},
+  organization={IEEE}
+}
+@article{garcia2009addressing,
+  title={Addressing software impact in the design of remote laboratories},
+  author={Garcia-Zubia, Javier and Ordu{\~n}a, Pablo and L{\'o}pez-de-Ipi{\~n}a, Diego and Alves, Gustavo R},
+  journal={IEEE Transactions on Industrial Electronics},
+  volume={56},
+  number={12},
+  pages={4757--4767},
+  year={2009},
+  publisher={IEEE}
+}
+
+
