--- a/modelo_monografia_DECAT.tex
+++ b/modelo_monografia_DECAT.tex
@@ -34,6 +34,7 @@
 \usepackage{supertabular}       % tabela na capa do documento
 \usepackage{mathtools}
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 % ---
 		
@@ -264,7 +265,7 @@
 % Agradecimentos
 % ---
 \begin{agradecimentos}
-\noindent Inserir aqui seus agradecimentos.
+\noindent Agradeço ao parazinho.
 
 \end{agradecimentos}
 % ---
